--- a/www/templates/firmar.html
+++ b/www/templates/firmar.html
@@ -6,9 +6,12 @@
         </p>
         <p>Por favor, inicie sesión pulsando el botón correspondiente.</p>
         <hr>
-        <button id="firmar-button2" style="margin: 50px 0" ng-click="loginFB()" 
+        <button id="firmar-button2" style="margin: 50px 0 0 0" ng-click="loginFB()" 
         class=" button button-positive  button-block icon-left ion-social-facebook ">
-        Iniciar sesión</button>
+        Iniciar sesión con Facebook</button>
+        <button id="firmar-button2" ng-click="loginTW()" 
+        class=" button button-positive  button-block icon-left ion-social-twitter ">
+        Iniciar sesión con Twitter</button>
         <hr>
         <p style="font-size: 90%">Creado por: Fernando Magrosoto V.</p>
     </ion-content>
