--- a/www/css/estilos.css
+++ b/www/css/estilos.css
@@ -1,8 +1,16 @@
 .centrado {
     text-align: center;
+    margin-bottom: 25px;
 }
 
 #fbpic {
-    border: 2px gray solid;
-
+    border: 5px gray solid;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    background-size: cover;
+    margin: auto;
 }
